basic mechanism done

--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <html>
 	<head>
 		<title>Hangman</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 
 	<body>
-		<main>
-			Hangman
+		<div class="main">
+			<div class="main__title">Hangman</div>
+			<div class="main__word"></div>
+			<div class="main__drawingArea"></div>
+			<div class="main__input"></div>
+		</div>
 
-		</main>
-
-		<nav>
-			navigation
-		</nav>
+		<div class="nav">
+			ildarmgt@gmail.com
+		</div>
 
 		<!-- <script type="text/javascript" src="./scripts/jquery.min.js"> -->
-		<!-- <script type="text/javascript" src="./scripts/sjcl.js"> -->
+		<script type="text/javascript" src="scripts/helpfunc.js"></script>
+		<script type="text/javascript" src="scripts/sjcl.js"></script>
+		<script type="text/javascript" src="scripts/variables.js"></script>
 		<script type="text/javascript" src="scripts/index.js"></script>
 	</body>
 </html>
