basic game done

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 		<div class="main">
 			<div class="main__title">Hangman</div>
 			<div class="main__word"></div>
-			<div class="main__drawingArea"></div>
+			<div class="main__hint"></div>
+			<div class="main__score">Score: 5</div>
+			<div class="main__lives">Lives: 6</div>
+			<canvas class="main__drawingArea" width="400" height="300">
+				Canvas doesn't work in this browser
+			</canvas>
 			<div class="main__input"></div>
+		</div>
+
+		<div class="main__results">
+			<div class="main__results__stats">Results</div>
+			<div class="main__results__btnOk">OK</div>
 		</div>
 
 		<div class="nav">
