--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				Canvas doesn't work in this browser
 			</canvas>
 			<div class="main__input"></div>
+			<!-- <div class="main__wheel"></div> -->
 		</div>
 
 		<div class="main__results">
